# Psydian

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
psydian/: .gitignore  package-lock.json  package.json  vite.config.ts
psydian.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
psydian/backend/: database.py  main.py  models.py  schemas.py
psydian/backend/routers/: files.py
psydian/models/: nota.py  orm.py
psydian/repositories/: indice_repository.py  nota_repository.py
psydian/src-tauri/: Cargo.toml  tauri.conf.json
psydian/src-tauri/src/: main.rs
